<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ar.com.ivanfenoy.myroute.fragments.NewTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#22000000"
            android:text="{fa-road}"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:textSize="50sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_trip_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <EditText
            android:id="@+id/edt_trip_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_trip_name"
            android:textColor="@color/grey_text"
            android:textColorHint="@color/grey_text3"
            android:textSize="12sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <EditText
            android:id="@+id/edt_start_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_start_date"
            android:textColor="@color/grey_text"
            android:editable="false"
            android:focusable="false"
            android:textSize="12sp"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_trip_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <EditText
            android:id="@+id/edt_trip_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/select_img"
            android:textColor="@color/grey_text"
            android:editable="false"
            android:focusable="false"
            android:textSize="12sp"
            android:inputType="none" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_add_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:text="@string/create_trip"
        style="@style/Base.Widget.AppCompat.Button.ButtonBar.AlertDialog"/>

</LinearLayout>
