<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="ar.com.ivanfenoy.myroute.fragments.NewTripFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center">

        <com.joanzapata.iconify.widget.IconTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:shadowColor="#22000000"
            android:text="{mdi-map-marker-multiple}"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="1"
            android:textSize="50sp"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="99">

            <RelativeLayout
                android:id="@+id/btn_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:foreground="?selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ico_info"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_green"
                        android:shadowColor="#22000000"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="1"
                        android:text="{fa-info}"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_info"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_attraction"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:foreground="?selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ico_attraction"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_green"
                        android:shadowColor="#22000000"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="1"
                        android:text="{fa-camera}"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_attraction"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_hotel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:foreground="?selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ico_hotel"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_green"
                        android:shadowColor="#22000000"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="1"
                        android:text="{fa-bed}"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_hotel"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="8dp"
            android:weightSum="99">

            <RelativeLayout
                android:id="@+id/btn_park"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:foreground="?selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ico_park"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_green"
                        android:shadowColor="#22000000"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="1"
                        android:text="{fa-camera}"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/map_park"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_view_point"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:foreground="?selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ico_view_point"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_green"
                        android:shadowColor="#22000000"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="1"
                        android:text="{fa-street-view}"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/white"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/map_view_point"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_camping"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="33"
                android:foreground="?selectableItemBackground">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.joanzapata.iconify.widget.IconTextView
                        android:id="@+id/ico_camping"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circle_green"
                        android:shadowColor="#22000000"
                        android:shadowDx="3"
                        android:shadowDy="3"
                        android:shadowRadius="1"
                        android:text="{mdi-tent}"
                        android:textSize="25sp"
                        android:gravity="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/map_camping"
                        android:textColor="@color/colorPrimary"/>

                </LinearLayout>

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
